# Robotics

ex01/: commands.txt
lab 6/my_robot/conf_move/: setup.py
lab 6/my_robot/conf_move/conf_move/: lidar.py  move.py
lab 6/my_robot/robot_description/urdf/: imu.urdf.xacro
lab02/ex02/: list_exec_action_tutorials.txt
lab02/ex03/package_ryumin/: CMakeLists.txt  package.xml
lab02/ex04/: colcon_build.txt
lab02/ex05/: rosnode_info.txt  rosnode_list.txt
lab02/ex06/: cmd_vel.txt
lab02/ex08/: rqt_console.txt.csv  three_turtles.launch
lab02/ex09/full_name_message/: CMakeLists.txt  package.xml
lab02/ex10/ex210/: package.xml  setup.cfg  setup.py
lab03/ex01/py_srvcli/: package.xml  setup.py
lab03/ex01/tutorial_interfaces/: CMakeLists.txt
lab03/ex02/: action_client.py  action_server.py
lab03/ex02/action_turtle_commands/: CMakeLists.txt  package.xml
lab03/ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml
lab03/ex03/turtle_cmd_vel.mcap/: metadata.yaml  rosbag2_2023_10_25-21_19_42_0.db3
lab03/ex04/: doctor.txt
lab03/ex05/move_to_goal/: package.xml  setup.py
lab04/ex01/: last_transform.txt  transform.txt
lab04/ex02/: frames_2023-11-09_11.01.59.gv  инструкции
lab04/ex02/learning_tf2_py/: package.xml  setup.py
lab04/ex03/time_tf2_py/: package.xml  setup.py
lab05/my_robot/conf_move/: setup.cfg  setup.py
lab_0/ex01/: commands.txt
my_robot/conf_move/: package.xml
my_robot/conf_move/conf_move/: depth.py
my_robot/robot_bringup/launch/: diff_drive.launch.py
my_robot/robot_description/urdf/: gazebo.urdf.xacro  robot.urdf.xacro
(+15 files in other folders)
